Update CORS policy for GitHub Pages